[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.8.4"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

utoipa = {features = ["axum_extras"], version = "5.4.0"}
utoipa-swagger-ui = {features = ["axum"], version = "9.0.2"}

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "postgres"] }
serde = "1.0.219"